Review status indicator and re-request review button are misaligned Fixes #4620

--- a/webviews/activityBarView/index.css
+++ b/webviews/activityBarView/index.css
@@ -23,6 +23,10 @@ textarea {
 	width: 16px;
 }
 
+.reviewer-icons .icon svg {
+	margin-right: 0px;
+}
+
 #status-checks {
 	display: flex;
 	flex-direction: column;
